--- a/project.json
+++ b/project.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "UiPath.Database.Activities": "[1.7.1]",
     "UiPath.Excel.Activities": "[2.23.2-preview]",
+    "UiPath.IntelligentOCR.Activities": "[6.14.1]",
     "UiPath.Mail.Activities": "[1.22.1]",
     "UiPath.System.Activities": "[24.2.0-preview]",
     "UiPath.Testing.Activities": "[24.2.0-preview]",
